# rust-rest-api

./: .gitignore  Cargo.toml  README.md
HTTP Request/user/: create.http
logs/: api.log.2026-07-08
src/: app.rs  app_state.rs  lib.rs  main.rs
src/application/: user.rs
src/domain/: error.rs  user.rs
src/infra/: mod.rs  postgres.rs  user.rs
src/ping/: handlers.rs  routes.rs
src/shared/: error.rs  logging.rs
src/users/: domain.rs  dto.rs  handlers.rs  mod.rs  queries.rs  repository.rs  routes.rs  service.rs
src/web/: dto.rs  error_handler.rs  mod.rs  user.rs
